@startuml
class Pessoa {
    Nome: String
    Idade: Int
    CEP: String
    Numero: String
    Complemento: String
    Telefone: String[]

    FazerLogin()
}

class Professor <<entity>>{
    Matricula: String 

    CriarTurma()
    ExcluirTurma()
    EditarTurma()
    AvaliarProposta()
    ProporProposta()
}

class Aluno <<entity>>{
    Matricula: String
    DataDeEntrada: Data

    ProporProposta()
    EscolherProjeto()
}

class Gestor <<entity>>{
    Matricula: String

    CriarProfessor()
    ExcluirProfessor()
    CriarProjeto()
    EditarProjeto()
}

class Projeto <<entity>> {
    Titulo: String
    Descrição: String
    Status: String
    Ano: Int
    Área: String
    Entrega: Data
    ProductOwner: Usuario
    Autor: String
    Departamento: String
    Links: URL[]

    VerificarProjeto()
}

class Perfil  {
    Status: String
    Descrição: String
    Tipo: String
    Codigo: Int
    
    ConsultarProjeto()
}

class Turma <<entity>>{
    codigo: String
    Disciplina: String
    Departamento: String
}

class Buscador {
    BuscarProjeto()
    SelecionarProjeto()
}

Pessoa <|-- Professor
Pessoa <|-- Aluno
Pessoa <|-- Gestor

@enduml
